force-app/main/default/objects/Approval__c/Approval__c.object-meta.xml
<CustomObject>
    <description>Approvals for application submissions, ties to opportunity</description>
    <label>Approval</label>
    <nameField>
        <displayFormat>APR#{000000}</displayFormat>
        <label>Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>