force-app/main/default/objects/Approval__c/fields/App_Submission__c.field-meta.xml
<CustomField>
    <fullName>App_Submission__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>App Submission</label>
    <referenceTo>App_Submission__c</referenceTo>
    <relationshipLabel>Approvals</relationshipLabel>
    <relationshipName>Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>