force-app/main/default/objects/Approval__c/fields/Broker_Fee_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Broker_Fee_Revenue__c</fullName>
    <label>Broker Fee Revenue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>