force-app/main/default/objects/Approval__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EFA</fullName>
            </value>
            <value>
                <fullName>FMV</fullName>
            </value>
            <value>
                <fullName>Sale Leaseback</fullName>
            </value>
            <value>
                <fullName>True Lease</fullName>
            </value>
            <value>
                <fullName>LOC</fullName>
            </value>
            <value>
                <fullName>Rev Based Loan</fullName>
            </value>
            <value>
                <fullName>Factoring</fullName>
            </value>
            <value>
                <fullName>HELOC</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>