force-app/main/default/objects/Approval__c/fields/Doc_Fee__c.field-meta.xml
<CustomField>
    <fullName>Doc_Fee__c</fullName>
    <description>Doc fee from funding source</description>
    <label>Doc Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>