force-app/main/default/objects/Approval__c/fields/Net_Funded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Funded_Amount__c</fullName>
    <label>Net Funded Amount</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>