force-app/main/default/objects/Approval__c/fields/Periodic_Payment__c.field-meta.xml
<CustomField>
    <fullName>Periodic_Payment__c</fullName>
    <label>Periodic Payment</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>