force-app/main/default/objects/Approval__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>