force-app/main/default/objects/Approval__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Terms Review</fullName>
            </value>
            <value>
                <fullName>Terms Accepted</fullName>
            </value>
            <value>
                <fullName>Terns Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>