force-app/main/default/objects/Approval__c/fields/Term_Length__c.field-meta.xml
<CustomField>
    <fullName>Term_Length__c</fullName>
    <description>length of the term</description>
    <label>Term Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>