force-app/main/default/objects/Approval__c/recordTypes/Working_Capital.recordType-meta.xml
<RecordType>
    <fullName>Working_Capital</fullName>
    <active>true</active>
    <label>Working Capital</label>
</RecordType>